        other types as well.

      - Never really an official feature, the FileSystemSite-based layout
        system has been removed from the code. This means that
        service_layouts is now gone.

      - SilvaDocument's 'fulltext' method returns a list as it did in
        the past, now that Zope has been bugfixed to handle this
        again.

  1.4

    Features added

      - Added a JavaScript registry for onload handlers and used that to
        do some refactoring of the tab_edit pagetemplates.

      - Added support for Kupu 1.3.

      - Added a field to the silva-extra metadata-set: hide_from_toc. 
        By default set to do not hide, when this is set to hide on a piece
        of content, that content (and what it contains) will not show up in
        tables of content.

      - Added a link_type attribute to Link (Version) objects. Adding 
        relative links is now possible.

      - Browsing to objects (for e.g. link and image lookups) has been 
        refactored, now there's only a single implementation of the lookup
        window, and somewhat cleaner HTML.

      - It is now possible to have table cells without a width attribute,
        which means you can style your tables through css entirely. To use
        this feature, give the column widths a value of '*'.

    Bugs Fixed

      - Un-fixed a Zope-2.7.7 compatibility issue with using ZCTextIndex.
        The original fix was basically a work arround for Zope bug. This
        means Silva can no longer work properly with Zope-2.7.7.

      - Updated tests/README.txt to reflect the now preferred way for
        running the tests. ZopeTestCase-0.9.8 is now required.

      - When content without a maintitle was exported, it could not be
        imported again.

      - Image tags in exported silva documents had their src attribute 
        converted to an absolute url on export.

      - In some cases the registered upgraders for the new Silva version